fraud-detection: Update the Gradio app for EzUA 1.2.0
Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/fraud-detection/application/helm/values.yaml
+++ b/demos/fraud-detection/application/helm/values.yaml
@@ -28,13 +28,13 @@ podAnnotations: {}
 podSecurityContext: {}
 # fsGroup: 2000
 
-securityContext: {}
+securityContext:
 # capabilities:
 #   drop:
 #   - ALL
 # readOnlyRootFilesystem: true
-# runAsNonRoot: true
-# runAsUser: 1000
+  runAsNonRoot: false
+  runAsUser: 0
 
 service:
   type: ClusterIP
