Updated volumeMounts for Spark GPU examples

--- a/Data-Analytics/Spark-GPU/Python/scala-gpu-example.yaml
+++ b/Data-Analytics/Spark-GPU/Python/scala-gpu-example.yaml
@@ -33,6 +33,9 @@ spec:
     memory: "1024m"
     labels:
       version: 3.5.0
+    volumeMounts:
+      - name: shared-volume
+        mountPath: /mounts/shared-volume
   executor:
     cores: 1
     coreLimit: "1000m"
@@ -40,3 +43,15 @@ spec:
     memory: "2G"
     labels:
       version: 3.5.0
+    volumeMounts:
+      - name: shared-volume
+        mountPath: /mounts/shared-volume
+    gpu:
+      name: "nvidia.com/gpu"
+      quantity: 1
+    labels:
+      version: 3.5.0
+  volumes:
+    - name: shared-volume
+      persistentVolumeClaim:
+        claimName: kubeflow-shared-pvc
