--- a/Data-Analytics/Spark-GPU/Scala/scala-gpu-example.yaml
+++ b/Data-Analytics/Spark-GPU/Scala/scala-gpu-example.yaml
@@ -34,13 +34,26 @@ spec:
     memory: "512m"
     labels:
       version: 3.5.0
+    volumeMounts:
+      - name: shared-volume
+        mountPath: /mounts/shared-volume
   executor:
     cores: 1
     coreLimit: "1000m"
     instances: 1
     memory: "2G"
+    labels:
+      version: 3.5.0
+    volumeMounts:
+      - name: shared-volume
+        mountPath: /mounts/shared-volume
     gpu:
       name: "nvidia.com/gpu"
       quantity: 1
     labels:
       version: 3.5.0
+  volumes:
+    - name: shared-volume
+      persistentVolumeClaim:
+        claimName: kubeflow-shared-pvc
+  
