demos/rag: Migrate QnA demo to UA 1.3.0
Migrate the Question-Answering demo to UA version 1.3.0:

* Switch to a base Jupyter image for the demo
* Generate new tokens via Keycloak for every request
* Use IPython Widgets where possible
* Update URLs for KServe Inference Services
* Refresh Docker images for custom KServe Inference Services
* Amend the UI Gradio application
* Upgrade dependency versions in requirements.txt
* Update the README file

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/rag-demos/question-answering/application/helm/values.yaml
+++ b/demos/rag-demos/question-answering/application/helm/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: dpoulopoulos/qna-app
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.1.0"
+  tag: "v1.3.0-d79aa03"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -28,13 +28,13 @@ podAnnotations: {}
 podSecurityContext: {}
 # fsGroup: 2000
 
-securityContext: {}
+securityContext:
 # capabilities:
 #   drop:
 #   - ALL
 # readOnlyRootFilesystem: true
 # runAsNonRoot: true
-# runAsUser: 1000
+  runAsUser: 0
 
 service:
   type: ClusterIP
