--- a/demos/rag-demos/question-answering/dockerfiles/vectorstore/Dockerfile
+++ b/demos/rag-demos/question-answering/dockerfiles/vectorstore/Dockerfile
@@ -1,16 +1,11 @@
-FROM python:3.9.0-slim
+FROM python:3.11.5-bookworm
 
 RUN apt update && apt install build-essential -y
 
 COPY src/requirements.txt src/requirements.txt
 RUN pip install --upgrade pip
-RUN pip install pip install --trusted-host=pypi.org \
-                            --trusted-host=files.pypi.org \
-                            --trusted-host=files.pythonhosted.org \
-                            --trusted-host=pytorch.org \
-                            --trusted-host=files.pytorch.org \
-                            --trusted-host=download.pytorch.org \
-                            -r /src/requirements.txt
+RUN pip install pip install -r /src/requirements.txt
+RUN pip install kserve==0.11.2
 
 COPY src/model.py src/model.py
 COPY src/utils.py src/utils.py
