--- a/demos/rag-demos/question-answering/requirements.txt
+++ b/demos/rag-demos/question-answering/requirements.txt
@@ -1,11 +1,11 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch>=1.6.0
-torchvision==0.15.2
-mlflow==2.1.1
-boto3==1.21.0
-chromadb==0.3.26
-langchain==0.0.194
+torch==2.2.0
+mlflow==2.10.2
+boto3==1.28.69
+chromadb==0.4.22
+langchain==0.1.7
+langchain-community==0.0.20
 sentence-transformers==2.2.2
 tqdm==4.65.0
 jupyter==1.0.0
-ipywidgets==7.7.5
+ipywidgets==8.1.2
