--- a/demos/rag-demos/question-answering-gpu/application/helm/values.yaml
+++ b/demos/rag-demos/question-answering-gpu/application/helm/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: dpoulopoulos/qna-app-mlde
+  repository: dpoulopoulos/qna-app-gpu
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.1.0"
+  tag: "v1.3.0-2d7386d"
 
 imagePullSecrets: []
 nameOverride: ""
