--- a/demos/bike-sharing/requirements.txt
+++ b/demos/bike-sharing/requirements.txt
@@ -1,7 +1,8 @@
 numpy==1.19.5
 pandas==1.4.4
 seaborn==0.12.2
-scikit-learn==1.0.1
+scikit-learn==1.3.0
 boto3==1.20.24
+mlflow==2.10.2
 jupyter==1.0.0
-mlflow==2.1.1
+ipywidgets==8.1.2
