demos/fraud-detection: Update the image tags
Update the tag of the image in the front-end Gradio application.

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/fraud-detection/application/helm/values.yaml
+++ b/demos/fraud-detection/application/helm/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: dpoulopoulos/fraud-detection-app
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.2.1"
+  tag: "v1.3.0-061fd1f"
 
 imagePullSecrets: []
 nameOverride: ""
