Update Docker images
Update the Docker images for each tutorial to point to the images pushed
to our public HPE registry.

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/fraud-detection/application/helm/values.yaml
+++ b/demos/fraud-detection/application/helm/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: dpoulopoulos/fraud-detection-app
+  repository: marketplace.us1.greenlake-hpe.com/ezmeral/ezkf/fraud-detection-app
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1.3.0-061fd1f"
+  tag: "v1.3.0-e658264"
 
 imagePullSecrets: []
 nameOverride: ""
