chatbot: Remove decoupled transaction policy restriction
Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/chatbot/dockerfiles/triton-inference-server/Dockerfile
+++ b/demos/chatbot/dockerfiles/triton-inference-server/Dockerfile
@@ -1,3 +1,5 @@
 FROM nvcr.io/nvidia/tritonserver:24.03-vllm-python-py3
 
 RUN pip install --upgrade huggingface-hub
+
+COPY model.py /opt/tritonserver/backends/vllm/model.py
