demos/chatbot: Update front-end image name and tag
Update the name and the tag for the front-end application, to use the
latest version.

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/rag-demos/chatbot/application/helm/Chart.yaml
+++ b/demos/rag-demos/chatbot/application/helm/Chart.yaml
@@ -1,6 +1,6 @@
 name: chatbot
-version: 1.4.2
+version: 1.4.0
 apiVersion: v2
-appVersion: v1.4.2
-description: Install the AI Search application on EzAF
+appVersion: v1.4.0
+description: Install the HPE portfolio assistant
 type: application
