--- a/demos/rag-demos/chatbot/dockerfiles/agent/Dockerfile
+++ b/demos/rag-demos/chatbot/dockerfiles/agent/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /workspace
 ADD src/requirements.txt /workspace/requirements.txt
 RUN pip install -r requirements.txt
 
+RUN pip install pypdf
+
 ADD src /workspace
 
 ENV HOME=/workspace
