--- a/demos/rag-demos/chatbot/deployment/helm/templates/hpa.yaml
+++ b/demos/rag-demos/chatbot/deployment/helm/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "ai-search.fullname" . }}
+  name: {{ include "chatbot.fullname" . }}
   labels:
-    {{- include "ai-search.labels" . | nindent 4 }}
+    {{- include "chatbot.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "ai-search.fullname" . }}
+    name: {{ include "chatbot.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
