--- a/demos/rag-demos/chatbot/deployment/helm/templates/nvidia-nim-llm-24.02.day0.yaml
+++ b/demos/rag-demos/chatbot/deployment/helm/templates/nvidia-nim-llm-24.02.day0.yaml
@@ -1,4 +1,5 @@
 kind: ClusterServingRuntime
+apiVersion: serving.kserve.io/v1alpha1
 metadata:
   name: nvidia-nim-llm-24.02.day0
 spec:
@@ -11,9 +12,9 @@ spec:
       ln -s /mnt/models/* /model-store/; \
       echo 'engine:
         model: /model-store
-        tensor_parallel_size: {{.Annotations.num_gpus}}
+        tensor_parallel_size: {{`{{ .Annotations.num_gpus }}`}}
         dtype: float16' > /tmp/model_config.yaml; \
-      nim_vllm --model_name={{.Annotations.nim_model_name}} \
+      nim_vllm --model_name={{`{{ .Annotations.nim_model_name }}`}} \
         --openai_port=8000 \
         --model_config /tmp/model_config.yaml
     command:
