--- a/demos/rag-demos/chatbot/deployment/helm/templates/service.yaml
+++ b/demos/rag-demos/chatbot/deployment/helm/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ai-search.fullname" . }}
+  name: {{ include "chatbot.fullname" . }}
   labels:
-    {{- include "ai-search.labels" . | nindent 4 }}
+    {{- include "chatbot.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "ai-search.selectorLabels" . | nindent 4 }}
+    {{- include "chatbot.selectorLabels" . | nindent 4 }}
