--- a/demos/rag-demos/chatbot/deployment/helm/templates/serviceaccount.yaml
+++ b/demos/rag-demos/chatbot/deployment/helm/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "ai-search.serviceAccountName" . }}
+  name: {{ include "chatbot.serviceAccountName" . }}
   labels:
-    {{- include "ai-search.labels" . | nindent 4 }}
+    {{- include "chatbot.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
