--- a/demos/rag-demos/chatbot/deployment/helm/templates/agent.yaml
+++ b/demos/rag-demos/chatbot/deployment/helm/templates/agent.yaml
@@ -28,11 +28,11 @@ spec:
         - name: LANGSERVE_PORT
           value: "{{ .Values.agent.langservePort }}"
         - name: SQL_URL
-          value: "http://{{ .Values.sqlCoder.name }}.{{ .Values.namespace }}:8000/v1"
+          value: "http://{{ .Values.sqlCoder.name }}.{{ .Release.Namespace }}:8000/v1"
         - name: LLM_URL
-          value: "http://{{ .Values.llm.name }}-predictor.{{ .Values.namespace }}/v1"
+          value: "http://{{ .Values.llm.name }}-predictor.{{ .Release.Namespace }}/v1"
         - name: EMBEDDINGS_URL
-          value: "http://{{ .Values.embeddings.name }}-predictor.{{ .Values.namespace }}/v1"
+          value: "http://{{ .Values.embeddings.name }}-predictor.{{ .Release.Namespace }}/v1"
         image:  "{{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag }}"
         imagePullPolicy: IfNotPresent
         name: chain-server
