--- a/demos/rag-demos/chatbot/deployment/helm/templates/embeddings.yaml
+++ b/demos/rag-demos/chatbot/deployment/helm/templates/embeddings.yaml
@@ -24,4 +24,4 @@ spec:
           memory: 64Gi
           nvidia.com/gpu: "1"
       runtime: nvidia-nim-embedding-24.02
-      storageUri: pvc://nim-pvc/model-store/
+      storageUri: pvc://{{ .Values.modelVolume }}/model-store/
