--- a/demos/rag-demos/chatbot/deployment/helm/templates/llm.yaml
+++ b/demos/rag-demos/chatbot/deployment/helm/templates/llm.yaml
@@ -25,4 +25,4 @@ spec:
           memory: 48Gi
           nvidia.com/gpu: "1"
       runtime: nvidia-nim-llm-24.02.day0
-      storageUri: pvc://nim-pvc/model-store/Llama-2-7b-chat-hf/
+      storageUri: pvc://{{ .Values.modelVolume }}/Llama-2-7b-chat-hf/
