--- a/Data-Engineering/Airflow/example_spark_pi_oss.yaml
+++ b/Data-Engineering/Airflow/example_spark_pi_oss.yaml
@@ -11,7 +11,7 @@ spec:
   imagePullSecrets:
   - imagepull
   mainClass: org.apache.spark.examples.SparkPi
-  mainApplicationFile: "local:///mnt/shared/ezua-tutorials/current-release/Data-Analytics/Spark/pi/pi.py"
+  mainApplicationFile: "local:///mounts/shared-volume/shared/ezua-tutorials/current-release/Data-Analytics/Spark/pi/pi.py"
   restartPolicy:
     type: Never
   driver:
@@ -20,6 +20,9 @@ spec:
     memory: "512m"
     labels:
       version: '{{dag_run.conf["spark_image_version"]}}'
+    volumeMounts:
+      - name: shared-volume
+        mountPath: /mounts/shared-volume/shared
   executor:
     cores: 1
     instances: 2
@@ -27,3 +30,10 @@ spec:
     memory: "512m"
     labels:
       version: '{{dag_run.conf["spark_image_version"]}}'
+    volumeMounts:
+      - name: shared-volume
+        mountPath: /mounts/shared-volume/shared
+    volumes:
+      - name: shared-volume
+        persistentVolumeClaim:
+          claimName: kubeflow-shared-pvc
