--- a/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
+++ b/Data-Engineering/Airflow/example_ezaf_spark_csv_to_parquet_fts.yaml
@@ -39,6 +39,7 @@ spec:
         mountPath: /mounts/shared-volume/shared
   executor:
     cores: 1
+    coreLimit: "2000m"
     instances: 2
     memory: "512m"
     labels:
