--- a/demos/rag-demos/question-answering/dockerfiles/vectorstore/Dockerfile
+++ b/demos/rag-demos/question-answering/dockerfiles/vectorstore/Dockerfile
@@ -4,7 +4,7 @@ RUN apt update && apt install build-essential -y
 
 COPY src/requirements.txt src/requirements.txt
 RUN pip install --upgrade pip
-RUN pip install pip install -r /src/requirements.txt
+RUN pip install -r /src/requirements.txt
 RUN pip install kserve==0.11.2
 
 COPY src/model.py src/model.py
