--- a/Data-Analytics/Spark-GPU/Python/scala-gpu-example.yaml
+++ b/Data-Analytics/Spark-GPU/Python/scala-gpu-example.yaml
@@ -20,7 +20,7 @@ spec:
   type: Python
   sparkVersion: 3.5.1
   mode: cluster
-  image: gcr.io/mapr-252711/spark-gpu-3.5.1:v3.5.1.0.1
+  image: gcr.io/mapr-252711/spark-3.5.1:v3.5.1.0.5
   imagePullPolicy: Always
   mainApplicationFile: "local:///mounts/shared-volume/shared/ezua-tutorials/current-release/Data-Analytics/Spark-GPU/Python/SqlOnGpuExample.py"
   restartPolicy:
